# rustup-plus-plus

./: .gitignore  Cargo.toml  README.md  toolchain.yaml
.github/workflows/: rust.yml
src/: config.rs  download.rs  flags.rs  lib.rs  main.rs  utils.rs
src/backend/: curl.rs  mod.rs  reqwest_be.rs
src/subcommands/: install.rs  mod.rs  package.rs
