[package]
name = "rustup-plus-plus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rustup_plus_plus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
serde = { version = "1.0.164", features=["derive"] }
serde_yaml = { version = "0.9.21" }